--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <script src="src/main.js"></script>
+    <link rel="stylesheet" href="styles.css">
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
