--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <title>==Gabe==</title>
     <script src="src/main.js"></script>
     <link rel="stylesheet" href="styles.css">
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hey People</h1>
+<p>Gabe sites.</p>
 </body>
 </html>
 
