add other + css change

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
     <title>==Gabe==</title>
     <script src="src/main.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 <body>
 <h1>Hey People</h1>
 <p>Gabe sites.</p>
+<button onclick="document.location='page2.html'">My other page</button>
 </body>
 </html>
 
