--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
     <title>Gabes other site</title>
     <script src="src/main2.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/style2.css">
 <body>
 <h1>Hey People</h1>
 <p>other site</p>
