--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link rel="stylesheet" href="css/styles.css">
 <body>
 <h1>Hey People</h1>
-<p>Gabe sites.</p>
+<p>Welcome to my site, How you found this, Could not of told ya. I'm Gabe, Gabriele Macri. 11 Years old and a growing developer:), I am workign on a few languages currently JS C# Advanced HTML Pyhton and css.
+    I am also looking to learn PHP and MySQL so yah. My progects so far are This website GaPP (My app) A .bat OS (not really but its cool) and others that I am working onn right now.
+    P.S for my fellow programers do you know githubCOpilot I've been on the waiting list for a while 
+    PEACE OUT :D
+</p>
 <button onclick="document.location='page2.html'">My other page</button>
+<button id="The Butt" 
 </body>
 </html>
 
