--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style2.css">
 <body>
 <h1>Hey People</h1>
-<p>other site</p>
+<p>other site for like testing and stuff</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROPuSqIwaQaFcvimvkAP9Ki6hzNv7LvAUU8w&usqp=CAU">
 </body>
 </html>
