--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     PEACE OUT :D
 </p>
 <button onclick="document.location='page2.html'">My other page</button>
-<button id="The Butt" 
+<button id="The Butt" onclick="document.location='page2.html'">butt</button>
 </body>
 </html>
 
