--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </p>
 <button onclick="document.location='page2.html'">My other page</button>
 <button id="The Butt" onclick="document.location='thebutt.html'">butt</button>
+<button id="The Tech Note" onclick="document.location='thetechnote.html'">My Tech Article</button>
 </body>
 </html>
 
