--- a/thetechnote.html
+++ b/thetechnote.html
@@ -4,7 +4,7 @@
     <title>The Tech Note</title>
 </head>
 <body>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSz3RAE_lUK06RnHzIoTC4YjbUZLrSkNp7RaC2neaCn4Ic0xjFA9sULgTfNOiZ2njE1ng-mNI2fHdKj/pub?embedded=true"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSz3RAE_lUK06RnHzIoTC4YjbUZLrSkNp7RaC2neaCn4Ic0xjFA9sULgTfNOiZ2njE1ng-mNI2fHdKj/pub?embedded=true" width="960" height="600"></iframe>
 </body>
 </html>
 
