--- a/thetechnote.html
+++ b/thetechnote.html
@@ -29,7 +29,7 @@ the modem then connects to the router which creates invisible waves that when co
 connects to your modem and then to your TV to show the channels. Where does everything gets its “magic” It comes from the serves where the cables come from to connect to the internet. 
 When you search something up it sends signals thru those wires to the servers which gives you your web page or search.
 
-Cloud Services 
+Cloud Services. 
 Today we have something called cloud services and these give us access to storage and web services like data storage, website hosting, mail servicing, and much more. 
 Today we have things like Google Drive, AWS, Microsoft Azure, IBM, and many more. They offer great  prices and are very easy to use and helpful for small businesses and communities. They run in big data centers.
 
@@ -40,18 +40,18 @@ We have promises of 6G soon and more fiber optic availability for remote areas. 
 Our prediction is by 2035 most cars will be electric and more than 78% of the world will have access to some form of technology. The internet is evolving at great masses and by the second website’s are being more available and search engines
 cleaner and eco friendly, Eco friendly!! Yes, the internet does produce waste and pollution more on that later. 
 
-Quantum Computers
+Quantum Computers.
 
 Right now scientists are working on quantum computers will be a huge evolution, They work like this our computers use 1’s and 0’s to store information in a pattern like ‘100101010’ but quantum computers use bits with numbers 
 1-9 like a patterns and the it interprets this like this “INPUT: compiled executable hex code OUTPUT: readable decompiled events or we can use  <if .. else .. or> operators and start the process again. The computer interprets the 
 string that is called a hexadecimal bin (or binary)”123456789”  so hexadecimal bin  is simply passing some data through a formula that produces a string of characters, as a result, code that you can understand and run to programs other 
  than ones and zeros binary wich is like 900x faster.
 
- Waste
+ Waste.
 
  E-waste represents 2% of Canada’s trash in landfills, but it equals 70% of overall toxic waste. 20 to 50 million metric tons of e-waste are disposed worldwide every year. Cell phones and other electronic items contain high amounts of precious metals like gold or silver.
 
- Closing
+ Closing.
 
  The internet and technology are very cool and it is fascinating how just 40 years ago nobody `would have thought this was possible. Technology is evolving greatly to help us in many ways.
  Just imagine time travel or being flown to school with seeing self-driving cars below you. Now that’s the power of tech. 
