--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <button onclick="document.location='page2.html'">My other page</button>
 <button id="The Butt" onclick="document.location='thebutt.html'">butt</button>
 <button id="The Tech Note" onclick="document.location='thetechnote.html'">My Tech Article</button>
-<a href="G1A1B1E.github.io-main.zip" download="g1a1b1e.github.io">
+<a href="G1A1B1E.github.io-main.zip" download="g1a1b1e.github.zip">
     <button>Source</button>
   </a>
 </body>
