--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ text-align: center;
 <button onclick="document.location='page2.html'">My other page</button>
 <button id="The Butt" onclick="document.location='thebutt.html'">butt</button>
 <button id="The Tech Note" onclick="document.location='thetechnote.html'">My Tech Article</button>
-<a href="G1A1B1E.github.io-main.zip" download="g1a1b1e.github.zip">
+<a href="https://github.com/G1A1B1E/G1A1B1E.github.io/archive/refs/heads/main.zip" download="g1a1b1e.github.io.zip">
     <button>Source</button>
   </a>
 </body>
