--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>==Gabe==</title>
     <script src="src/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/favicon.png">
 <body>
 <style>
     .myDiv {
