--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>==Gabe==</title>
+    <title>👩‍💻 🧑‍💻 👨‍💻 Gabes Website👩‍💻 🧑‍💻 👨‍💻 </title>
     <script src="src/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/favicon.png">
