--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>👩‍💻 🧑‍💻 👨‍💻 Gabes Website👩‍💻 🧑‍💻 👨‍💻 </title>
     <script src="src/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple">
     <link rel="icon" href="img/favicon.png">
 <body>
 <style>
