--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>👩‍💻 🧑‍💻 👨‍💻 Gabes Website👩‍💻 🧑‍💻 👨‍💻 </title>
+    <title>👩‍💻 🧑‍💻 👨‍💻 Gabes Website🧑‍💻 👨‍💻 </title>
     <script src="src/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple">
@@ -34,7 +34,7 @@ text-align: center;
  <div class="hello">
      <h1>Hey People</h1>
      <p>Welcome to my site, How you found this, Could not of told ya. I'm Gabe, Gabriele Macri. 11 Years old and a growing developer:), I am workign on a few languages currently JS C# Advanced HTML Pyhton and css.
-         I am also looking to learn PHP and MySQL so yah. My progects so far are This website GaPP (My app) A .bat OS (not really but its cool) and others that I am working onn right now.
+         I am also looking to learn PHP and MySQL so yah. My progects so far are This website, GaPP (My app), A .bat OS (not really but its cool), and others that I am working onn right now.
          P.S for my fellow programers do you know githubCOpilot I've been on the waiting list for a while 
          PEACE OUT :D
      </p>
@@ -44,7 +44,7 @@ text-align: center;
 
 
 <button onclick="document.location='page2.html'">My other page</button>
-<button id="The Butt" onclick="document.location='thebutt.html'">butt</button>
+<button id="The Butt" onclick="document.location='thebutt.html'">(do not click) Butt</button>
 <button id="The Tech Note" onclick="document.location='thetechnote.html'">My Tech Article</button>
 <a href="https://github.com/G1A1B1E/G1A1B1E.github.io/archive/refs/heads/main.zip" download="g1a1b1e.github.io.zip">
     <button>Source</button>
