--- a/page2.html
+++ b/page2.html
@@ -7,5 +7,21 @@
 <h1>Hey People</h1>
 <p>other site for like testing and stuff</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROPuSqIwaQaFcvimvkAP9Ki6hzNv7LvAUU8w&usqp=CAU">
+<button onclick="myFunction()">Try it</button>
+
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  let text;
+  let person = prompt("Please enter your name:", "Name");
+  if (person == null || person == "") {
+    text = "User cancelled the prompt.";
+  } else {
+    text = "Hello " + person + "! How are you today?";
+  }
+  document.getElementById("demo").innerHTML = text;
+}
+</script>
 </body>
 </html>
