--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@ text-align: center;
       </head>
       <body>
       
+        <div class="topnav">
+          <a class="active" href="index.html">Home</a>
+          <a href="">Other Page</a>
+          <a href="">Redacted</a>
+          <a href="">The Tech Note</a>
+          <a href="">Buttons</a>
+        </div>
       
       <div class="myDiv">
         <h2>Hullo How are you</h2>
@@ -43,12 +50,7 @@ text-align: center;
 
 
 
-<button onclick="document.location='page2.html'">My other page</button>
-<button id="The Butt" onclick="document.location='thebutt.html'">(do not click)</button>
-<button id="The Tech Note" onclick="document.location='thetechnote.html'">My Tech Article</button>
-<a href="https://github.com/G1A1B1E/G1A1B1E.github.io/archive/refs/heads/main.zip" download="g1a1b1e.github.io.zip">
-    <button>Source</button>
-  </a>
+
 </body>
 </html>
 
