--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,7 @@
     <title>Gabes other site</title>
     <script src="src/main2.js"></script>
     <link rel="stylesheet" href="css/style2.css">
+    <link rel="icon" href="img/favicon.png">
 <body>
 <h1>Hey People</h1>
 <p>other site for like testing and stuff</p>
