--- a/thebutt.html
+++ b/thebutt.html
@@ -3,6 +3,7 @@
     <head>
         <title>BUTT</title>
         <script src="src/onclickbutt.js"></script>
+        <link rel="icon" href="img/favicon.png">
     </head>
     <body>
 
