--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ text-align: center;
       
         <div class="topnav">
           <a class="active" href="index.html">Home</a>
-          <a href="">Other Page</a>
-          <a href="">Redacted</a>
-          <a href="">The Tech Note</a>
-          <a href="">Buttons</a>
+          <a href="page2.html">Other Page</a>
+          <a href="thebutt.html">Redacted</a>
+          <a href="thetechnote.html">The Tech Note</a>
+          <a href="buttons.html">Buttons</a>
         </div>
       
       <div class="myDiv">
