div change for navibar

--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" href="css/style2.css">
     <link rel="icon" href="img/favicon.png">
 <body>
+  <div class="topnav">
+    <a class="active" href="index.html">Home</a>
+    <a href="page2.html">Other Page</a>
+    <a href="thebutt.html">Redacted</a>
+    <a href="thetechnote.html">The Tech Note</a>
+    <a href="buttons.html">Buttons</a>
+  </div>
 <h1>Hey People</h1>
 <p>other site for like testing and stuff</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROPuSqIwaQaFcvimvkAP9Ki6hzNv7LvAUU8w&usqp=CAU">
