--- a/thetechnote.html
+++ b/thetechnote.html
@@ -13,6 +13,13 @@
     </style>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="index.html">Home</a>
+        <a href="page2.html">Other Page</a>
+        <a href="thebutt.html">Redacted</a>
+        <a href="thetechnote.html">The Tech Note</a>
+        <a href="buttons.html">Buttons</a>
+      </div>
 <div class="note">
     <h1 id="title">
 The Tech Note
