--- a/thebutt.html
+++ b/thebutt.html
@@ -4,7 +4,7 @@
         <title>BUTT</title>
         <script src="src/onclickbutt.js"></script>
         <link rel="icon" href="img/favicon.png">
-        <link rel="stylesheet" href="butt.css">
+        <link rel="stylesheet" href="css/butt.css">
     </head>
     <body>
         <div class="topnav">
