--- a/page2.html
+++ b/page2.html
@@ -11,6 +11,7 @@
     <a href="thebutt.html">Redacted</a>
     <a href="thetechnote.html">The Tech Note</a>
     <a href="buttons.html">Buttons</a>
+    <a href="contact.html">Contact</a>
   </div>
 <h1>Hey People</h1>
 <p>other site for like testing and stuff</p>
