--- a/buttons.html
+++ b/buttons.html
@@ -5,12 +5,16 @@
     <link rel="icon" href="img/favicon.png">
 </head>
 <body>
+    <h1>Backup Page for the source and buttons</h1>
+    <h1>Src is in console</h1>
     <button onclick="document.location='page2.html'">My other page</button>
 <button id="The Butt" onclick="document.location='thebutt.html'">(do not click)</button>
 <button id="The Tech Note" onclick="document.location='thetechnote.html'">My Tech Article</button>
 <a href="https://github.com/G1A1B1E/G1A1B1E.github.io/archive/refs/heads/main.zip" download="g1a1b1e.github.io.zip">
     <button>Source</button>
   </a>
+ <script> console.log("https://github.com/G1A1B1E/G1A1B1E.github.io/archive/refs/heads/main.zip") </script>
+
 </body>
 </html>
 
