--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ text-align: center;
           <a href="thebutt.html">Redacted</a>
           <a href="thetechnote.html">The Tech Note</a>
           <a href="buttons.html">Buttons</a>
+          <a href="contact.html">Contact</a>
         </div>
       
       <div class="myDiv">
