--- a/thetechnote.html
+++ b/thetechnote.html
@@ -19,6 +19,7 @@
         <a href="thebutt.html">Redacted</a>
         <a href="thetechnote.html">The Tech Note</a>
         <a href="buttons.html">Buttons</a>
+        <a href="contact.html">Contact</a>
       </div>
 <div class="note">
     <h1 id="title">
