cookies.js and https shi|

--- a/buttons.html
+++ b/buttons.html
@@ -3,6 +3,7 @@
 <head>
     <title>Buttons</title>
     <link rel="icon" href="img/favicon.png">
+    <script src="src/cookies.js"></script>
 </head>
 <body>
     <h1>Backup Page for the source and buttons</h1>
