--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
 <html>
     <title>Gabes other site</title>
     <script src="src/main2.js"></script>
+    <script src="src/cookies.js"></script>
     <link rel="stylesheet" href="css/style2.css">
     <link rel="icon" href="img/favicon.png">
 <body>
