--- a/thebutt.html
+++ b/thebutt.html
@@ -3,6 +3,7 @@
     <head>
         <title>BUTT</title>
         <script src="src/onclickbutt.js"></script>
+        <script src="src/cookies.js"></script>
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/butt.css">
     </head>
