--- a/thetechnote.html
+++ b/thetechnote.html
@@ -3,6 +3,7 @@
 <head>
     <title>The Tech Note</title>
     <link rel="stylesheet" href="css/thetechnote.css">
+    <script src="src/cookies.js"></script>
     <link rel="icon" href="img/favicon.png">
     <style>
         .note{
