--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <title>👩‍💻 🧑‍💻 👨‍💻 Gabes Website🧑‍💻 👨‍💻 </title>
     <script src="src/main.js"></script>
+    <script src="src/cookies.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple">
     <link rel="icon" href="img/favicon.png">
