--- a/buttons.html
+++ b/buttons.html
@@ -4,6 +4,8 @@
     <title>Buttons</title>
     <link rel="icon" href="img/favicon.png">
     <script src="src/cookies.js"></script>
+    <script src="src/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
     <h1>Backup Page for the source and buttons</h1>
