--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <script src="src/cookies.js"></script>
+    <script src="src/jquery-3.6.0.min.js"></script>
+
     <style>
       html, body {
       min-height: 100%;
