--- a/thetechnote.html
+++ b/thetechnote.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/thetechnote.css">
     <script src="src/cookies.js"></script>
     <link rel="icon" href="img/favicon.png">
+    <script src="src/jquery-3.6.0.min.js"></script>
     <style>
         .note{
             border: 10px outset blue ;
