--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,8 @@
     <script src="src/cookies.js"></script>
     <link rel="stylesheet" href="css/style2.css">
     <link rel="icon" href="img/favicon.png">
+    <script src="src/jquery-3.6.0.min.js"></script>
+
 <body>
   <div class="topnav">
     <a class="active" href="index.html">Home</a>
