--- a/thebutt.html
+++ b/thebutt.html
@@ -6,6 +6,8 @@
         <script src="src/cookies.js"></script>
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/butt.css">
+        <script src="src/jquery-3.6.0.min.js"></script>
+
     </head>
     <body>
         <div class="topnav">
