--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ text-align: center;
      </p>
      </div>
 
-
+     <div class="footer">
+      <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">My Github!</a>
+    </div>
+    
 
 
 
