--- a/thetechnote.html
+++ b/thetechnote.html
@@ -75,6 +75,10 @@ We have promises of 6G soon and more fiber optic availability for remote areas. 
 Just imagine time travel or being flown to school with seeing self-driving cars below you. Now that’s the power of tech. 
 </p>
 </div>
+<div class="footer">
+    <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">My Github!</a>
+  </div>
+  
 </body>
 </html>
 
