--- a/page2.html
+++ b/page2.html
@@ -35,5 +35,9 @@ function myFunction() {
   document.getElementById("demo").innerHTML = text;
 }
 </script>
+<div class="footer">
+  <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">My Github!</a>
+</div>
+
 </body>
 </html>
