--- a/thetechnote.html
+++ b/thetechnote.html
@@ -76,9 +76,10 @@ Just imagine time travel or being flown to school with seeing self-driving cars 
 </p>
 </div>
 <div class="footer">
-    <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">My Github!</a>
+    <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">
+      <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU">
+    </a>
   </div>
-  
 </body>
 </html>
 
