--- a/page2.html
+++ b/page2.html
@@ -36,7 +36,9 @@ function myFunction() {
 }
 </script>
 <div class="footer">
-  <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">My Github!</a>
+  <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">
+    <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU">
+  </a>
 </div>
 
 </body>
