--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ text-align: center;
 
      <div class="footer">
       <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">
-        <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU">
+        <img src="https://github.githubassets.com/favicons/favicon.svg">
       </a>
     </div>
     
