--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@ function myFunction() {
 </script>
 <div class="footer">
   <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">
-    <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU">
+    <img src="https://github.githubassets.com/favicons/favicon.svg">
   </a>
 </div>
 
