--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple">
     <link rel="icon" href="img/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
 <body>
 <style>
     .myDiv {
-border: 5px outset red;
- background-color: lightblue;    
+border: 5px outset black;
+padding: 3%;
+ background-color: white;    
 text-align: center;
       }
       </style>
@@ -19,8 +24,9 @@ text-align: center;
 
       <style>
         .hello{
-            border: 2px outset green;
-            background-color: aqua;
+            border: 2px outset black;
+            padding: 3%;
+            background-color: white;
             text-align: center;
         }
       </style>
