--- a/thetechnote.html
+++ b/thetechnote.html
@@ -6,10 +6,15 @@
     <script src="src/cookies.js"></script>
     <link rel="icon" href="img/favicon.png">
     <script src="src/jquery-3.6.0.min.js"></script>
-    <style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
+   <style>
         .note{
-            border: 10px outset blue ;
-            background-color: rgb(255, 79, 79);
+            border: 10px outset black;
+            padding: 5px;
+            background-color: wheat;
             text-align: center;
         }
     </style>
