--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="css/style2.css">
     <link rel="icon" href="img/favicon.png">
     <script src="src/jquery-3.6.0.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
 
 <body>
   <div class="topnav">
