--- a/thebutt.html
+++ b/thebutt.html
@@ -7,6 +7,10 @@
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="css/butt.css">
         <script src="src/jquery-3.6.0.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
 
     </head>
     <body>
