--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ text-align: center;
         <div class="topnav">
           <a class="active" href="index.html">Home</a>
           <a href="page2.html">Other Page</a>
-          <a href="thebutt.html">Redacted</a>
+          <a href="thebutt.html">SUS</a>
           <a href="thetechnote.html">The Tech Note</a>
-          <a href="buttons.html">Buttons</a>
+          
           <a href="contact.html">Contact</a>
         </div>
       
@@ -57,6 +57,7 @@ text-align: center;
      </div>
 
      <div class="footer">
+      <p>Made With love by Gabe Macri</p>
       <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">
         <img src="https://github.githubassets.com/favicons/favicon.svg">
       </a>
