--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
     <a href="page2.html">Other Page</a>
     <a href="thebutt.html">Redacted</a>
     <a href="thetechnote.html">The Tech Note</a>
-    <a href="buttons.html">Buttons</a>
+    
     <a href="contact.html">Contact</a>
   </div>
 <h1>Hey People</h1>
@@ -40,6 +40,7 @@ function myFunction() {
 }
 </script>
 <div class="footer">
+  <p>Made With love by Gabe Macri</p>
   <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">
     <img src="https://github.githubassets.com/favicons/favicon.svg">
   </a>
