--- a/thetechnote.html
+++ b/thetechnote.html
@@ -25,7 +25,7 @@
         <a href="page2.html">Other Page</a>
         <a href="thebutt.html">Redacted</a>
         <a href="thetechnote.html">The Tech Note</a>
-        <a href="buttons.html">Buttons</a>
+        
         <a href="contact.html">Contact</a>
       </div>
 <div class="note">
@@ -81,6 +81,7 @@ Just imagine time travel or being flown to school with seeing self-driving cars 
 </p>
 </div>
 <div class="footer">
+    <p>Made With love by Gabe Macri</p>
     <a href="https://github.com/G1A1B1E/G1A1B1E.github.io">
       <img src="https://github.githubassets.com/favicons/favicon.svg">
     </a>
