--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@ text-align: center;
         <img src="https://github.githubassets.com/favicons/favicon.svg">
       </a>
     </div>
+    <div class="musica">
+      <h1>Music Babby</h1>
     <iframe style="border-radius:12px" 
     src="https://open.spotify.com/embed/playlist/4qzzfye2WZkTEi8I0FXyXo?utm_source=generator" 
     width="100%" height="500" frameBorder="0" allowfullscreen="" 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
     </iframe>
-
+  </div>
 
 
 </body>
