--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
-<body>
+<body><script async src="https://www.googletagmanager.com/gtag/js?id=G-PS242KB42D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PS242KB42D');
+</script>
 <style>
     .myDiv {
 border: 5px outset black;
