add links +format

--- a/index.html
+++ b/index.html
@@ -1,49 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="css/styles.scss">
-    <script src="src/js/script.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <meta name="title" content="Gabes Website - Home ">
-    <meta name="description" content="An all around website for me and anyone who pleases.Feel free to check out my other reposhttps://github.com/g1a1b1e">
-    <meta name="keywords" content="website,good,gabe,macri,github">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="revisit-after" content="5 days">
-    <meta name="author" content="Gabe Macri">
+  <link rel="stylesheet" href="css/styles.scss">
+  <script src="src/js/script.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="title" content="Gabes Website - Home ">
+  <meta name="description"
+    content="An all around website for me and anyone who pleases.Feel free to check out my other reposhttps://github.com/g1a1b1e">
+  <meta name="keywords" content="website,good,gabe,macri,github">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="5 days">
+  <meta name="author" content="Gabe Macri">
 </head>
+
 <body>
-    <div class="maincontent" id="body">
-        <div class="main" id="sticky">
-          <header>
-            <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-         </header>
-         
-         <h1>Animation Buttons</h1>
-         <p>Hover us and enjoy the satisfying neumorphic animation designs!</p>
-         <div class="frame">
-           <button class="custom-btn btn-1">Read More</button>
-           <button class="custom-btn btn-2">Read More</button>
-           <button class="custom-btn btn-3"><span>Read More</span></button>
-           <button class="custom-btn btn-4"><span>Read More</span></button>
-           <button class="custom-btn btn-5"><span>Read More</span></button>
-           <button class="custom-btn btn-6"><span>Read More</span></button>
-           <button class="custom-btn btn-7"><span>Read More</span></button>
-           <button class="custom-btn btn-8"><span>Read More</span></button>
-           <button class="custom-btn btn-9">Read More</button>
-           <button class="custom-btn btn-10">Read More</button>
-           <button class="custom-btn btn-11">Read More<div class="dot"></div></button>
-           <button class="custom-btn btn-12"><span>Click!</span><span>Read More</span></button>
-           <button class="custom-btn btn-13">Read More</button>
-           <button class="custom-btn btn-14">Read More</button>
-           <button class="custom-btn btn-15">Read More</button>
-           <button class="custom-btn btn-16">Read More</button>
-           <p style="font-family: Andale Mono, monospace;">
-             DEERBUCKS.DESIGNING</p>
-         </div>
-         
-        </div>
+  <div class="maincontent" id="body">
+    <div class="main" id="sticky">
+    <div class="links" id="Buttons">
+      <header>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+      </header>
+
+      <h1>List of all the usefull websites</h1>
+      <p>Click and find out</p>
+<div class="frame">
+  <a href="">
+    <button class="custom-btn btn-1">Read More</button> </a>
+  <div class="frame">
+    <a href="">
+      <button class="custom-btn btn-2">Read More</button> </a>
+    <div class="frame">
+      <a href="">
+        <button class="custom-btn btn-3">Read More</button> </a>
+      <div class="frame">
+        <a href="">
+          <button class="custom-btn btn-4">Read More</button> </a>
+        <div class="frame">
+          <a href="">
+            <button class="custom-btn btn-5">Read More</button> </a>
+          <div class="frame">
+            <a href="">
+              <button class="custom-btn btn-6">Read More</button> </a>
+            <div class="frame">
+              <a href="">
+                <button class="custom-btn btn-7">Read More</button> </a>
+              <div class="frame">
+                <a href="">
+                  <button class="custom-btn btn-8">Read More</button> </a>
+                <div class="frame">
+                  <a href="">
+                    <button class="custom-btn btn-9">Read More</button> </a>
+                  <div class="frame">
+                    <a href="">
+                      <button class="custom-btn btn-10">Read More</button> </a>
+                    <div class="frame">
+                      <a href="">
+                        <button class="custom-btn btn-11">Read More</button> </a>
+                      <div class="frame">
+                        <a href="">
+                          <button class="custom-btn btn-12">Read More</button> </a>
+                        <div class="frame">
+                          <a href="">
+                            <button class="custom-btn btn-13">Read More</button> </a>
+                          <div class="frame">
+                            <a href="">
+                              <button class="custom-btn btn-14">Read More</button> </a>
+                            <div class="frame">
+                              <a href="">
+                                <button class="custom-btn btn-15">Read More</button> </a>
+                              <div class="frame">
+                                <a href="">
+                                  <button class="custom-btn btn-16">Read More</button> </a>
+        </div>                     
+      </div>
     </div>
+  </div>
 </body>
+
 </html>
