--- a/index.html
+++ b/index.html
@@ -76,19 +76,15 @@
     <body>
     
     <div class="header">
-      <a href="#default" class="logo">CompanyLogo</a>
+      <a href="https://g1a1b1e.github.io" class="logo"><img src="" alt="Logo">
+      </a>
       <div class="header-right">
-        <a class="active" href="#home">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="https://g1a1b1e.github.io">Links</a>
+        <a href="">stuff</a>
+        <a href="">more</a>
       </div>
     </div>
     
-    <div style="padding-left:20px">
-      <h1>Responsive Header</h1>
-      <p>Resize the browser window to see the effect.</p>
-      <p>Some content..</p>
-    </div>
 </div>
 <body>
   <div class="maincontent" id="body">
