--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
     <body>
     
     <div class="header">
-      <a href="https://g1a1b1e.github.io" class="logo"><img src="src/ico/Blue Modern Game Logo.svg" alt="Logo">
+      <a href="https://g1a1b1e.github.io" class="logo"><img src="src/ico/Blue Modern Game Logo.svg" alt="Logo"
+        width="50" 
+        height="50">
       </a>
       <div class="header-right">
         <a class="active" href="https://g1a1b1e.github.io">Links</a>
