head change+ico

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <title>Gabes Website - Home</title>
+  <link rel="apple-touch-icon" href="src/ico/Blue Modern Game Logo.svg">
+  <link rel="shortcut icon" href="src/ico/Blue Modern Game Logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="css/styles.scss">
   <script src="src/js/script.js"></script>
   <link rel="stylesheet" href="css/style.css">
