--- a/index.html
+++ b/index.html
@@ -153,6 +153,32 @@
       </div>
     </div>
   </div>
+  <div class="footer-container fixed">
+    <div class="footer-content">
+      <div class="footer-item">
+        <a href="https://twitter.com/GMacru" class="footer-link">
+          <span class="footer-link-text">X</span>
+          <span class="footer-link-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="39" height="35" viewBox="0 0 39 35" fill="none">
+              <path d="M30.6182 0.125H36.4451L23.715 14.6747L38.691 34.4735H26.9649L17.7807 22.4656L7.27178 34.4735H1.44135L15.0574 18.911L0.690964 0.125H12.7147L21.0165 11.1007L30.6182 0.125ZM28.5731 30.9858H31.8019L10.9603 3.4295H7.49549L28.5731 30.9858Z" fill="black" />
+            </svg>
+          </span>
+        </a>
+      </div>
+        </a>
+      </div>
+      <div class="footer-item">
+        <a href="https://www.youtube.com/channel/UC4MwefkgDVoxjivUK9Na3DA" class="footer-link">
+          <span class="footer-link-text">Youtube</span>
+          <span class="footer-link-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="39" viewBox="0 0 55 39" fill="none">
+              <path d="M53.024 6.87981C52.4012 4.53464 50.5661 2.68765 48.2361 2.06085C44.0128 0.921875 27.0778 0.921875 27.0778 0.921875C27.0778 0.921875 10.143 0.921875 5.91956 2.06085C3.58956 2.68775 1.75447 4.53464 1.13163 6.87981C0 11.1306 0 19.9994 0 19.9994C0 19.9994 0 28.8682 1.13163 33.119C1.75447 35.4642 3.58956 37.2342 5.91956 37.861C10.143 39 27.0778 39 27.0778 39C27.0778 39 44.0127 39 48.2361 37.861C50.5661 37.2342 52.4012 35.4642 53.024 33.119C54.1556 28.8682 54.1556 19.9994 54.1556 19.9994C54.1556 19.9994 54.1556 11.1306 53.024 6.87981ZM21.5391 28.0516V11.9472L35.6934 19.9996L21.5391 28.0516Z" fill="black" />
+            </svg>
+          </span>
+        </a>
+      </div>
+    </div> <!-- end .footer-content -->
+  </div> <!-- end .footer-container -->
 </body>
 
 </html>
