page 2 plz work

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       overflow: hidden;
       background-color: #f1f1f1;
       padding: 20px 10px;
+      
     }
     
     .header a {
@@ -84,8 +85,8 @@
         height="50">
       </a>
       <div class="header-right">
-        <a class="active" href="https://g1a1b1e.github.io">Links</a>
-        <a href="">stuff</a>
+        <a class="active" href="https://g1a1b1e.github.io">Home</a>
+        <a href="page2.html">Music</a>
         <a href="">more</a>
       </div>
     </div>
