add 3 links to test

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
       <h1>List of all the usefull websites</h1>
       <p>Click and find out</p>
 <div class="frame">
-  <a href="">
-    <button class="custom-btn btn-1">Read More</button> </a>
+  <a href="https://mathstudy.dev">
+    <button class="custom-btn btn-1">Math Study</button> </a>
   <div class="frame">
-    <a href="">
-      <button class="custom-btn btn-2">Read More</button> </a>
+    <a href="https://historypractice.org/">
+      <button class="custom-btn btn-2">Utopia</button> </a>
     <div class="frame">
-      <a href="">
-        <button class="custom-btn btn-3">Read More</button> </a>
+      <a href="https://r.achievementnetwork.cf/">
+        <button class="custom-btn btn-3">RammerHead</button> </a>
       <div class="frame">
         <a href="">
           <button class="custom-btn btn-4">Read More</button> </a>
