--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <a href="https://soccer.mikedoland.com/algebra">
           <button class="custom-btn btn-4">Mike Doland</button> </a>
         <div class="frame">
-          <a href="https://youtube.com>
+          <a href="https://youtube.com">
             <button class="custom-btn btn-5">Youtube</button> </a>
           <div class="frame">
             <a href="https://open.spotify.com">
@@ -145,11 +145,11 @@
                             <a href="https://general-mathematics-beta.moaivr123.repl.co/">
                               <button class="custom-btn btn-14">General Math</button> </a>
                             <div class="frame">
-                              <a href="">
-                                <button class="custom-btn btn-15">Read More</button> </a>
+                              <a href="https://hypertabs-10.elijahsocool.repl.co/">
+                                <button class="custom-btn btn-15">HyperTab</button> </a>
                               <div class="frame">
-                                <a href="">
-                                  <button class="custom-btn btn-16">Read More</button> </a>
+                                <a href="https://docs.google.com/document/d/1nK6tJb-sxfrrQJM9bSWcAV-Fo7jHasd_dWpj4VEVg5E/edit">
+                                  <button class="custom-btn btn-16">More Links</button> </a>
         </div>                     
       </div>
     </div>
