p3 indev make page

--- a/page2.html
+++ b/page2.html
@@ -85,7 +85,7 @@
     <div class="header-right">
       <a class="active" href="https://g1a1b1e.github.io">Home</a>
       <a href="page2.html">Music</a>
-      <a href="">more</a>
+      <a href="page3.html">INDEV</a>
     </div>
   </div>
 <div class="content-wrapper" id="maincontent">
