--- a/page3.html
+++ b/page3.html
@@ -77,6 +77,30 @@
       </style>
       </head>
 <body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAwKjjrufdjQbuVuY22ysq4IuaHIFDxMy0",
+      authDomain: "g1a1b1e.firebaseapp.com",
+      projectId: "g1a1b1e",
+      storageBucket: "g1a1b1e.appspot.com",
+      messagingSenderId: "1012113335287",
+      appId: "1:1012113335287:web:56f3cfbf052b09bf5284f2",
+      measurementId: "G-8Q2DR0DTDW"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
+
     <div class="header">
         <a href="https://g1a1b1e.github.io" class="logo"><img src="src/ico/Blue Modern Game Logo.svg" alt="Logo"
           width="50" 
