--- a/page3.html
+++ b/page3.html
@@ -114,7 +114,9 @@
       </div>
       <div class="content-wrapper" id="main">
 
-        
+        <!-- Content Goes Here -->
+
+
       </div>
       <div class="bottom" id="footer">
         <div class="footer-container fixed">
