add 2 more pages

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
       <div class="header-right">
         <a class="active" href="https://g1a1b1e.github.io">Home</a>
         <a href="page2.html">Music</a>
-        <a href="page3.html">INDEV</a>
+        <a href="page3.html">Bookmarklets</a>
+        <a href="page4.html">INDEV</a>
+        <a href="page5.html">INDEV</a>
       </div>
     </div>
     
